2005-07-06  David Hansen  <david.hansen@gmx.net>

	* shimbun/sb-infoshop.el: New file.

2005-07-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-header-regexp-default):
	Make it match to headers also in the eye.shasetsu.archive group.
	(shimbun-mainichi-group-table): Add the eye.shasetsu.archive group.
	(shimbun-mainichi-get-headers): Make it work with the eye.shasetsu
	group and the eye.shasetsu.archive group.

2005-07-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-prepare-article):
	Shorten paragraph separators in the kinji articles even if they
	aren't appeared in the eye.kinji group; break continuous lines in
	the yoroku articles even if they aren't appeared in the eye.yoroku
	group.

2005-07-05  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* ChangeLog: Add file local variables to set fill-column 74 and
	indent-tabs-mode t.

2005-07-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el: Rewrite.
	(shimbun-mainichi-header-regexp-default): New variable.

	* shimbun/sb-text.el (shimbun-shallow-rendering): Handle <br /> as
	well as <br>.

	* shimbun/nnshimbun.el (nnshimbun-request-delete-group): Make sure
	the parent directory exists.

2005-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-cnn-jp.el (shimbun-cnn-jp-prefer-text-plain): Remove
	it temporarily (cf. http://emacs-w3m.namazu.org/ml/msg08121.html).

2005-07-03  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* w3m-search.el (w3m-search-engine-alist): Add "technorati-*"
	entries.

2005-07-03  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-cnn-jp.el (shimbun-cnn-jp-prefer-text-plain): Add new
	variable, set as text type.

	* shimbun/sb-engadget-ja.el: New file.

2005-07-02  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-heise.el: (shimbun-heise-wash-telepolis-article):
	Remove more ads.

2005-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>
