@@ -176,7 +176,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1149 $"))
+    (let ((rev "$Revision: 1.1150 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1136))
 	   (format "1.4.%d" (+ rev 50)))))
@@ -7147,7 +7147,11 @@ function is designed as the hook function which is registered to
 This function is designed as the hook function which is registered to
 `post-command-hook' by `w3m-buffer-setup'."
   (when (/= (point) (car w3m-current-position))
-    (run-hooks 'w3m-after-cursor-move-hook)))
+    ;; To bind `deactivate-mark' to nil protects the mark from being
+    ;; deactivated.  `deactivate-mark' is set when any function modifies
+    ;; a buffer, and it causes the deactivation of the mark.
+    (let ((deactivate-mark nil))
+      (run-hooks 'w3m-after-cursor-move-hook))))
 
 (defun w3m-buffer-setup ()
   "Generate a new buffer, select it and set it up for emacs-w3m.
